testdata/golden/sema/invalid/mut_string_temp_borrow.sg
fn take_mut(s: &mut string) -> nothing {
    let _ = s;
}

fn main() {
    take_mut("temp");
}
